--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,10 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <!-- Remove those package imports because embedded and relocated via shade plugin (see below) -->
                         <Import-Package>
+                          <!-- Support XSS API 1.x and 2.x - we use only classes from the API with same signature in both versions -->
+                          org.apache.sling.xss;version="[1.0.0,3)",
+                          <!-- Remove those package imports because embedded and relocated via shade plugin (see below) -->
                           !org.apache.sling.commons.osgi,
                           *
                         </Import-Package>
@@ -151,12 +153,6 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.commons.json</artifactId>
-            <version>2.0.10</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.3.2</version>
@@ -167,6 +163,12 @@
             <artifactId>commons-collections</artifactId>
             <version>3.2.1</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-json_1.0_spec</artifactId>
+            <version>1.0-alpha-1</version>
+            <scope>provided</scope>
         </dependency>
         
         <!-- web console dependencies -->
@@ -222,6 +224,12 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>2.0.87-beta</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.johnzon</groupId>
+            <artifactId>johnzon-core</artifactId>
+            <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
 
