--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.caconfig.spi</artifactId>
-            <version>1.3.2</version>
+            <version>1.3.3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
