--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,8 @@
                 <configuration>
                     <instructions>
                         <Import-Package>
+                          <!-- WebConsole support is optional -->
+                          org.apache.felix.webconsole;resolution:=optional,
                           <!-- Support XSS API 1.x and 2.x - we use only classes from the API with same signature in both versions -->
                           org.apache.sling.xss;version="[1.0.0,3)",
                           <!-- Remove those package imports because embedded and relocated via shade plugin (see below) -->
