--- a/pom.xml
+++ b/pom.xml
@@ -29,19 +29,19 @@
 
     <artifactId>org.apache.sling.caconfig.impl</artifactId>
     <packaging>jar</packaging>
-    <version>1.6.0</version>
+    <version>1.6.1-SNAPSHOT</version>
     <name>Apache Sling Context-Aware Configuration Implementation</name>
     <description>Apache Sling Context-Aware Configuration Implementation</description>
 
     <properties>
-        <project.build.outputTimestamp>2022-01-03T11:39:05Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2022-01-03T11:39:49Z</project.build.outputTimestamp>
     </properties>
 
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-caconfig-impl.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-caconfig-impl.git</developerConnection>
         <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-caconfig-impl.git</url>
-        <tag>org.apache.sling.caconfig.impl-1.6.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <build>
