--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.caconfig.impl</artifactId>
-    <version>1.7.1-SNAPSHOT</version>
+    <version>1.7.2</version>
     <packaging>jar</packaging>
     <name>Apache Sling Context-Aware Configuration Implementation</name>
     <description>Apache Sling Context-Aware Configuration Implementation</description>
@@ -36,13 +36,13 @@
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-caconfig-impl.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-caconfig-impl.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>org.apache.sling.caconfig.impl-1.7.2</tag>
         <url>https://github.com/apache/sling-org-apache-sling-caconfig-impl.git</url>
     </scm>
 
     <properties>
         <sling.java.version>11</sling.java.version>
-        <project.build.outputTimestamp>2025-03-05T17:42:33Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2025-03-12T12:14:28Z</project.build.outputTimestamp>
     </properties>
 
     <dependencies>
